# irssi

./: .gitignore  .qoderignore  2025-08-11-this-session-is-being-continued-from-a-previous-co.txt  CHANGELOG-v0.0.5.md  CLAUDE.md  FRONTEND_BACKEND_INTEGRATION_FIXES.md  GEMINI.md  GESTURE-DEBUG-STATUS.md  INSTALL-SCRIPT.md  IRSSI_NETWORK_SERVER_FIXES.md  NEWS  README.md  REFACTOR_PLAN.md  check-installation.sh  commit.sh  config_dev  config_test  do.sh  do_mouse_feedback  erssi-convert.sh  evolved_vs_master_diff.md  evolved_vs_master_diff_en.md  git_status_report.md  how  install-irssi.sh  install.sh  irssi.conf  irssi_tui_flow.md  log.txt  log2.txt  log3.txt  material-erssi.itermcolors  meson.build  meson_options.txt  nexus_base.theme  nexus_base_file.theme  nexus_steel_test.theme  output.txt  plan3.md  plan4.md  (+5 more)
.augment/rules/: architecture.md
.augment/rules/imported/: design.md  requirements.md  summary.md  tasks.md
.claude/: settings.json
.cursor/rules/: derived-cursor-rules.mdc
.kiro/specs/native-panels/: design.md  requirements.md  tasks.md
.qoder/rules/: global.md
.specstory/: .project.json
.specstory/history/: 2025-08-24_19-21Z-zapoznanie-się-z-kodem-projektu-irssi.md
docs/: MOUSE-GESTURES-CONFIG-TEMPLATES.md  MOUSE-GESTURES-QUICK-GUIDE.md  MOUSE-GESTURES-TECHNICAL.md  MOUSE-GESTURES-UX.md  proxy.txt
docs/help/in/: irssiproxy.in  window.in
inst/include/irssi/src/fe-text/: panels.h  split-panels.h
inst/lib/irssi/perl/auto/Irssi/: Irssi.bundle
inst/lib/irssi/perl/auto/Irssi/Irc/: Irc.bundle
inst/lib/irssi/perl/auto/Irssi/TextUI/: TextUI.bundle
inst/lib/irssi/perl/auto/Irssi/UI/: UI.bundle
inst/lib/pkgconfig/: irssi-1.pc
inst/share/irssi/help/: bind  hilight  network  scrollback  server  window
irssi-awl/: README.md  meson.build
irssi-awl/src/: awl_core.c
src/: common.h  meson.build
src/core/: special-vars.c  utf8.c
src/fe-common/core/: fe-expandos.c  fe-messages.c  formats.c  window-commands.c
src/fe-common/irc/: fe-whois.c
src/fe-text/: gui-gestures.c  gui-gestures.h  gui-mouse.c  gui-mouse.h  gui-readline.c  irssi.c  mainwindows.c  mainwindows.h  meson.build  module-formats.c  module-formats.h  panels.c  sidebar.c  sidepanels-activity.c  sidepanels-activity.h  sidepanels-core.c  sidepanels-layout.c  sidepanels-layout.h  sidepanels-render.c  sidepanels-render.h  sidepanels-signals.c  sidepanels-signals.h  sidepanels-types.h  sidepanels.c  sidepanels.h  split-panels.c  statusbar-config.c  statusbar.c  statusbar.h  textbuffer-view.c
src/fe-web/: fe-web-api.c  fe-web-client.c  fe-web-server.c  fe-web-signals.c  fe-web-simple.c  fe-web-utils.c  fe-web.c  fe-web.h  meson.build  module.h
src/fe-web/static/: index.html
src/irc/proxy/: proxy.c
tests/fe-text/: meson.build
themes/: meson.build  nexus.theme
web_proto/irssi-web/: package-lock.json  package.json
web_proto/irssi-web/app/: page.tsx
web_proto/irssi-web/lib/: irc-client.ts  types.ts  websocket-client.ts
